examples/cilium-api-egress.yaml
# Optional for a Cilium default-deny namespace.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: anvil-example-worker-api
  namespace: anvil-training
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: anvil-example-worker
  egress:
    - toEntities: [kube-apiserver]
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
            - port: '6443'
              protocol: TCP
